package tutorial;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Google.Protobuf.Examples.AddressBook";

enum GlobalType {
  A = 0; /* a comment */
  B = 1;
  C = 2;
}

// This is my Person.
message Person {
  string name = 1;
  int32 id = 2;  // Unique ID number for this person.
  string email = 3;

  enum OuterPhoneType {
    CELL = 0;
  }

  message PhoneNumber {
    enum InnerPhoneType {
      MOBILE = 0;
      HOME = 1;
      WORK = 2;
    }

    string number = 1;
    InnerPhoneType itype = 2;
    OuterPhoneType otype = 3;
    GlobalType gtype = 4;
  }

  repeated PhoneNumber phone_vec = 4;

  // Imported messages.
  google.protobuf.Timestamp timestamp = 5;
  google.protobuf.ForeignOuter.ForeignInner imported = 6;
}

message AddressBook {
  repeated Person person_vec = 1;
  repeated string x = 2;
  repeated int32 y = 3;
}
